various small corrections, minor revision to T109

--- a/01_agama/dirgha/DA_13.md
+++ b/01_agama/dirgha/DA_13.md
@@ -181,7 +181,7 @@ next: DA_14.html
 45\. “Ānanda, it’s for this reason that we know seeking comes from craving. ‘Seeking exists conditioned by craving.’ That’s the meaning of what I said.
 {:#p45}
 
-46\. He also told Ānanda, “Seeking exists conditioned by craving up to guarding and safeguards. Feeling is likewise. Seeking exists because of feeling up to guarding and safeguards.
+46\. He also told Ānanda, “Seeking exists conditioned by craving up to guarding and safeguards. Feeling is likewise. Seeking exists because of feeling up to guarding and safeguards.”
 {:#p46}
 
 #### Dependent Origination of Feeling
@@ -245,7 +245,7 @@ next: DA_14.html
 59\. “Ānanda, it’s for this reason that we know name and form comes from consciousness. ‘Name and form exist conditioned by consciousness.’ That’s the meaning of what I said.
 {:#p59}
 
-60\. “Ānanda, “‘Consciousness exists conditioned by name and form.’ What does this mean? If consciousness didn’t abide in name and form, then consciousness would have nowhere to reside. If it had nowhere to reside, would there be birth, old age, illness, death, grief, sorrow, pain, and trouble?”
+60\. “Ānanda, ‘Consciousness exists conditioned by name and form.’ What does this mean? If consciousness didn’t abide in name and form, then consciousness would have nowhere to reside. If it had nowhere to reside, would there be birth, old age, illness, death, grief, sorrow, pain, and trouble?”
 {:#p60}
 
 “There wouldn’t be.”
@@ -299,7 +299,7 @@ next: DA_14.html
 
 #### The View That Self Is What Feels
 
-74\. Ānanda, some who postulate a self make this statement: ‘Feeling is not self, and the self is not feeling, but what feels is the self.’ They should be told, ‘If everything is without feeling, how can you say there’s something that feels? Are you the thing that feels?’ The answer would be, ‘No.’
+74\. “Ānanda, some who postulate a self make this statement: ‘Feeling is not self, and the self is not feeling, but what feels is the self.’ They should be told, ‘If everything is without feeling, how can you say there’s something that feels? Are you the thing that feels?’ The answer would be, ‘No.’
 {:#p74}
 
 75\. “Therefore, Ānanda, some postulate a self and say feeling is not self, and self is not feeling, but what feels is self. They are incorrect.
