--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -302,7 +302,7 @@ The Buddha addressed Lord Śakra, “Not all the ascetics and the priests on the
 45\. The Buddha told Lord Śakra, “There are three kinds of error: First is speech, second are concepts, and third are pursuits. Speech is words that harm oneself, harm others, and harm both oneself and others. When these words are abandoned, one’s words don’t harm oneself, don’t harm others, and don’t harm both oneself and others. When that’s known, a monk’s words are such that he focuses his attention and isn’t distracted.
 {:#p45}
 
-46\. [Some] concepts also harm oneself, harm others, and harm both oneself and others. Abandoning these concepts, one’s conception is such that it doesn’t harm oneself, doesn’t harm others, and doesn’t harm oneself and others. When he knows this, the monk’s conception is such that he focuses his attention and isn’t distracted.
+46\. “[Some] concepts also harm oneself, harm others, and harm both oneself and others. Abandoning these concepts, one’s conception is such that it doesn’t harm oneself, doesn’t harm others, and doesn’t harm oneself and others. When he knows this, the monk’s conception is such that he focuses his attention and isn’t distracted.
 {:#p46}
 
 47\. “Lord Śakra, pursuits also harm oneself, harm others, and harm both oneself and others. Abandoning these pursuits, one’s pursuits are such that they don’t harm oneself, don’t harm others, and don’t harm both oneself and others. When he knows this, the monk’s pursuits are such that he focuses his attention and isn’t distracted.”
