--- a/01_agama/dirgha/DA_15.md
+++ b/01_agama/dirgha/DA_15.md
@@ -83,7 +83,7 @@ next: DA_16.html
 19\. “Wanderer, you should know that when the monk Sunakṣatra was finished soliciting alms, he took his robe and bowl and returned to me. He bowed to my feet and sat to one side. Sunakṣatra then told me about what had happened. I said to him, ‘You fool! Wouldn’t you rather call yourself an ascetic Śākyan disciple?’
 {:#p19}
 
-“Sunakṣatra quickly replied, ‘Bhagavān, why call me a fool? Shouldn’t I call myself a Śākyan disciple?’
+“Sunakṣatra quickly replied, ‘Why do you call me a fool, Bhagavān? Shouldn’t I call myself a Śākyan disciple?’
 
 20\. “I told him, ‘Fool, you’ve already gone and questioned that Nirgrantha disciple about a profound subject. He couldn’t answer it, so he became angry. Then you thought to yourself, ‘Now, I’ve bothered this Nirgrantha disciple. Won’t this lead to a result of suffering that will last a long time?’ You had that thought, didn’t you?”
 {:#p20}
@@ -99,7 +99,7 @@ next: DA_16.html
 23\. “‘That Nirgrantha disciple will be like a jackal weakened by a skin disease when he dies on a burial mound in a cemetery. He’ll violate all his own teaching’s rules. He vowed to himself, ‘I won’t wear clothes for my entire life,’ but he’ll return to wearing clothes. He vowed to himself, ‘I won’t drink alcohol, eat meat, or eat rice or wheat flour,’ but he’ll eat all of them. He vowed to himself, ‘I won’t violate the religious life,’ but he’ll violate it. He vowed, ‘I won’t go beyond the four shrines, the eastern Mourning Park shrine, the southern Elephant shrine, the western Many Children shrine, and the northern Seven Copse shrine.’ But far from them and doesn’t stay nearby. That man will contradict his own seven vows, leave the city of Vaiśālī, and his life will end in a cemetery.’
 {:#p23}
 
-24\. “I told Sunakṣatra, ‘Fool, if you don’t believe what I say, go investigate it and realize it for yourself.’
+24\. “I told Sunakṣatra, ‘Fool, if you don’t believe what I say, go investigate it and realize it for yourself.’”
 {:#p24}
 
 25\. The Buddha told the wanderer, “One day, the monk Sunakṣatra put on his robe and took his bowl into the city to solicit alms. After soliciting alms, he left the city as he returned. He saw the Nirgrantha disciple’s life had ended in an empty cemetery. Seeing that, he came to me, bowed his head at my feet, and sat to one side, but that wasn’t what he spoke to me about.
@@ -118,10 +118,10 @@ next: DA_16.html
 28\. “Another time, I was at a town of the White Land in Maineya. A Nirgrantha disciple named Khoradattika was living there at the time. He was respected by people, his fame was far-reaching, and he received many offerings. I put on my robe and took my bowl into town to solicit alms, and the monk Sunakṣatra followed me. We saw the Nirgrantha disciple Khoradattika on a mound of refuse licking up coarse food.
 {:#p28}
 
-29\. “Wanderer, you should know that when the monk Sunakṣatra saw this Nirgrantha disciple doing that, he thought, ‘Whether or not there are arhats in the world who follow the arhat’s path, this Nirgrantha disciple’s path is supreme. Why is that? This man’s asceticism is such that he abandons his pride and squats on a mound of refuse licking up coarse food.”
+29\. “Wanderer, you should know that when the monk Sunakṣatra saw this Nirgrantha disciple doing that, he thought, ‘Whether or not there are arhats in the world who follow the arhat’s path, this Nirgrantha disciple’s path is supreme. Why is that? This man’s asceticism is such that he abandons his pride and squats on a mound of refuse licking up coarse food.’
 {:#p29}
 
-30\. “Wanderer, when he was walking on my right, I told Sunakṣatra, ‘You fool, wouldn’t you rather call yourself a Śākyan disciple?’
+30\. “Wanderer, when he was walking on my right, I told Sunakṣatra, ‘You fool! Wouldn’t you rather call yourself a Śākyan disciple?’
 {:#p30}
 
 “Sunakṣatra said to me, ‘Why do you call me a fool, Bhagavān? Shouldn’t I call myself a Śākyan disciple?’
