--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -199,7 +199,7 @@ next: DA_22.html
 59\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it has limits. They then say, ‘This world has limits. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I examined the world and its limits. Therefore, I know: “The world has limits. This is true; the rest is false.”’ This is the first view. As a result of creating this theory about past eons that self and the world have limits, ascetics and priests don’t go beyond these four views.
 {:#p59}
 
-60\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it’s limitlessness. They then say, ‘This world is limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world and its limitlessness. Therefore, I know: “This world is limitless. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons that self and the world are limitless, ascetics and priests don’t go beyond these four views.
+60\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it’s limitless. They then say, ‘This world is limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world and its limitlessness. Therefore, I know: “This world is limitless. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons that self and the world are limitless, ascetics and priests don’t go beyond these four views.
 {:#p60}
 
 61\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world. They take the upward direction to have a limit and the four directions to be limitless. They then say, ‘This world has a limit, and it’s limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world. I observed that the upward direction has a limit and that the four directions are limitless. Therefore, I know: “The world has a limit, and it’s limitless. This is true; the rest is false.”’ This is the third view. As a result of creating this theory about past eons that self and the world are limited and limitless, ascetics and priests don’t go beyond these four views.
