--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -241,7 +241,7 @@ next: DA_30-9.html
 71\. “Sometimes, a sentient being commits good physical deeds, speaks good words, and thinks good thoughts. When their body breaks up and their life ends, they are born among the four god kings. Their final consciousness ceases here, and an initial consciousness arises among the four god kings. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p71}
 
-72\. “When those gods are first born, they’re like one- or two-year-old human children. They spontaneous appear sitting on a god’s knee. That god then says, ‘This is my child!’
+72\. “When those gods are first born, they’re like one- or two-year-old human children. They spontaneously appear sitting on a god’s knee. That god then says, ‘This is my child!’
 {:#p72}
 
 73\. “As a reward for their conduct, knowledge spontaneously arises in them. They think to themselves, ‘What was the conduct that caused me to be born here now?’ Then they also think, ‘I was once among humans and did good physical deeds, spoke good words, and had good thoughts. It was because of this conduct that I’ve been born as a god now. If my life were to end and I were born again among humans, I would be physically, verbally, and mentally pure. I’d redouble my efforts and cultivate these good conducts.’
@@ -282,7 +282,7 @@ next: DA_30-9.html
 84\. “When a sentient being does good physical deeds, speaks good words, and thinks good thoughts, they are born in the Trāyastriṃśa Heaven when their body breaks up and their life ends. Their final consciousness ceases here, and an initial consciousness arises [in one of those gods]. Because of that consciousness, they have name and form. Because of that name and form, they have the six senses.
 {:#p84}
 
-85\. “When that god is first born, they’re like a two- or three-year-old child in Jambudvīpa. They spontaneously appears on a god’s knee, and that god says, ‘This is my son!’ or ‘This is my daughter!’ in the same way.
+85\. “When that god is first born, they’re like a two- or three-year-old child in Jambudvīpa. They spontaneously appear on a god’s knee, and that god says, ‘This is my son!’ or ‘This is my daughter!’ in the same way.
 {:#p85}
 
 #### Birth among the Yama Gods
