--- a/01_agama/ekottarika/15/EA_15_08.md
+++ b/01_agama/ekottarika/15/EA_15_08.md
@@ -19,7 +19,7 @@ next: EA_15_09.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.577c20'>爾時，世尊告諸比丘： 「有此二法，内自思惟、專精、一意，當禮法寶，亦禮如來神廟。 云何二法？ 有力、有無畏。 是謂比丘有此二法，内自思惟、專精、一意，當禮法寶，及如來神廟。 如是，諸比丘，當作是學。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two things that honor the Dharma jewel as well as the shrines of the Tathāgata and gods when one contemplates and focuses of them single-mindedly. What are the two things? Possessing the powers and kinds of fearlessness.<sup id="ref2"><a href="#n2">2</a></sup> Monks, these are two things that honor the Dharma jewel and the shrines of the Tathāgata and gods when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two things that honor the Dharma jewel as well as the shrines of the Tathāgata and gods when one contemplates and focuses on them single-mindedly. What are the two things? Possessing the powers and kinds of fearlessness.<sup id="ref2"><a href="#n2">2</a></sup> Monks, these are two things that honor the Dharma jewel and the shrines of the Tathāgata and gods when one contemplates and focuses on them single-mindedly. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.577c24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
