--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -198,7 +198,7 @@ next: EA_13_06.html
 <li id="n2"><p><em>twenty-one bonds</em>. This list occurs in different orders and with different translations in the three C. versions, and the terms used are often close synonyms. This makes precise translation difficult in a number of cases. It should be understood that this translation of the list is provisional, and it’s difficult to refine it further without detailed glosses to differentiate synonyms.</p>
 <p>It’s of interest to note how the list that appears here, in MĀ 93, and in Taisho 51 has twenty-one items, but MN 7’s list is not numbered and only consists of sixteen items. Also, MĀ 93’s list is of twenty-one defilements rather than bonds, which agrees with MN 7 but not the present <em>sūtra</em> or Taisho 51. These three versions (MN 7, MĀ 93, and EĀ 13.5/T51) appear to be disparate variations of some older text.</p>
 <p>This list of twenty-one bonds is also found in two other C. texts known to have been produced by the same translation team that produced EĀ. The first is a translation of an Abhidharma Vibhāṣa (T1547.28.424b6). It appears to reference a scriptural source similar to this <em>sūtra</em> or Taisho 51, though the quotation isn’t sufficient to identify it precisely. The second is a King Aśoka Avadāna text that contains a reference to the twenty-one bonds (T2045.50.172b29).</p>
-<p>The same translation team headed by Daoan was also said to have translated a version of MĀ that was later lost. T51 is one of a group of independent C. translations that parallel MĀ and EĀ <em>sūtra</em>s and that may actually be remnants of this lost MĀ.</p>
+<p>The same translation team headed by Dao-an was also said to have translated a version of MĀ that was later lost. T51 is one of a group of independent C. translations that parallel MĀ and EĀ <em>sūtra</em>s and that may actually be remnants of this lost MĀ.</p>
 <p>Thus, this particular list of twenty-one bonds might be an indication that these texts all belonged to a single branch of early Buddhism. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>Sundarastrī</em>. C. 孫陀羅諦利 (EMC. suən-da-la-tei-lɪi = G. <em>suṃdarastri</em> = S. <em>sundarastrī</em>). This translit. seems straightforward as S. <em>sundara</em> + <em>strī</em>, lit. meaning “beautiful woman.” The 翻梵語 (T2130.54.1019c24) confirms this reading (“譯曰：陀羅者好，諦利者女”). In other sources, however, he is named after the Sundarikā River, which is a feminine noun in S. This makes me wonder what took place to arrive at this situation. Was the priest a woman in this particular telling of the story, or was this name the result of an overly literal translation of S. <em>sundarīka</em> when the text passed from one Prakrit to another?</p>
 <p>In MN 7, the priest is called instead P. <em>sundarikabhāradvāja</em>, and simply P. <em>bhāradvāja</em> after he becomes a monk. MĀ 93 has still another name for the priest, translated to C. as 妙好首 (“Chief in Beauty” or “Beautiful Head”). 妙好 could certainly translate S. <em>sundara</em>. 首 could be a translation of S. <em>śīrṣa</em>, <em>śiras</em>, or <em>śrī</em>, which are similar in pronunciation to S. <em>strī</em>. [<a href="#ref3">back</a>]</p></li>
