--- a/01_agama/other/T109.md
+++ b/01_agama/other/T109.md
@@ -20,40 +20,40 @@ next: T110.html
 3\. The Buddha then addressed the monks, “The world has two things that fall into extreme practices when done by religious disciples who renounce the home life, and such people should never accompany those who follow those [two] things.
 {:#p3}
 
-4\. “What are the two? One is thinking about cravings without pure mindfulness. Second is attachment to personal preferences and not being able to make effort. For this reason, they retreat into extreme practices and don’t become noble people of the Buddha’s path. If these monks don’t think about cravings or attach to personal preferences, then it’s possible for them to accept the middle [way]. The Tathāgata’s supreme and right awakening that attained vision and wisdom was free from both extremes and resulted in his <em>nirvāṇa</em>.
+4\. “What are the two? One is thinking about cravings without pure mindfulness. Second is attachment to personal preferences and not being able to make effort. For this reason, they retreat into extreme practices and don’t become noble people of the Buddha’s path. If these monks don’t think about cravings or attach to personal preferences, then it’s possible for them to accept the middle [way]. The Tathāgata’s supreme and correct awakening that attained vision and wisdom was free from both extremes and resulted in his <em>nirvāṇa</em>.
 {:#p4}
 
 5\. “What is called accepting the middle [way]? It means accepting the correct eightfold path, which is 1. right view, 2. right intention, 3. right speech, 4. right action, 5. right livelihood, 6. right control, 7. right mindfulness,  and 8. right <em>samādhi</em>.
 {:#p5}
 
-6\. “If monks hear the path from beginning to end, they should already know the truth about suffering. Once they are single-minded, they accept it with vision, accept it with meditation, and accept it by wise observation. They will realize it by thinking about it, which will cause their minds to be liberated. They should know the truth of ending suffering’s accumulation. Having accepted it with vision, meditation, and wise observation, they will realize it by thinking about it, which will cause their minds to be liberated. The truth of [suffering’s] end is thus.
+6\. “If monks hear the path from beginning to end, they should already know the truth about suffering. Once they are single-minded, they accept it with vision, accept it with meditation, and accept it by wise observation. They will realize it by thinking about it, which will cause their minds to be liberated. They should know the truth of ending suffering’s formation. Having accepted it with vision, meditation, and wise observation, they will realize it by thinking about it, which will cause their minds to be liberated. The truth of [suffering’s] end is thus.
 {:#p6}
 
 7\. “What is suffering? It refers to the suffering of birth and old age, the suffering of illness, the suffering of grief, sorrow, and trouble, the suffering of association with what’s disliked, the suffering of separation from what’s loved, and the suffering of not getting what’s sought. Essentially, it’s the suffering from the five aggregates that are acquired and proliferate.
 {:#p7}
 
-8\. “What is the accumulation of suffering? It refers to repeated existence and a disposition towards pleasure that comes from craving. Not parting from indulgence, craving desires, craving for form, and craving non-form wherever it may be is the accumulation of suffering.
+8\. “What is the formation of suffering? It refers to repeated existence and a disposition towards pleasure that comes from craving. Not parting from indulgence, craving desires, craving for form, and craving non-form wherever it may be is the formation of suffering.
 {:#p8}
 
-9\. “What is the end of suffering? It refers to realizing that repeated existence and its pleasures come from craving. Lustful thoughts aren’t accepted. Not thinking of them, there’s no lust without remainder. Abandoning it, there’s no more meditation. The end of [suffering’s] accumulation is thus.
+9\. “What is the end of suffering? It refers to realizing that repeated existence and its pleasures come from craving. Lustful thoughts aren’t accepted. Not thinking of them, there’s no lust without remainder. Abandoning it, there’s no more meditation. The end of [suffering’s] formation is thus.
 {:#p9}
 
-10\. “What is the path that wants the end of suffering’s accumulation? It refers to accepting the practice of the correct eightfold path, which is right view, right intention, right speech, right livelihood, right control, right mindfulness, and right concentration. This is the truth of accepting the path to the end of suffering’s accumulation.
+10\. “What is the path that wants the end of suffering’s formation? It refers to accepting the practice of the correct eightfold path, which is right view, right intention, right speech, right livelihood, right control, right mindfulness, and right <em>samādhi</em>. This is the truth of accepting the path to the end of suffering’s formation.
 {:#p10}
 
-11\. “Furthermore, monks, these are the truth of suffering, the truth of what causes suffering’s accumulation, the truth of ending suffering’s accumulation, and the truth of accepting the path to the end of suffering’s accumulation.
+11\. “Furthermore, monks, these are the truth of suffering, the truth of what causes suffering’s formation, the truth of ending suffering’s formation, and the truth of accepting the path to the end of suffering’s formation.
 {:#p11}
 
-12\. “If someone had yet to hear this teaching sometime in the past, they should accept it with vision and meditation, accept it by wise observation, and realize it by thinking about it, which will cause their mind to attain liberation. If someone present here has yet to hear this teaching of four truths, they should accept it with vision, accept it with meditation, and accept it with wisdom and realization, which will cause their mind to attain liberation. If someone is somewhere else and doesn’t hear this teaching of four truths, they also should accept it with vision, accept it with meditation, accept it with wisdom, and accept it with realization, which will cause their mind to attain liberation. These are the four truths in three turnings that total 12 steps. When I knew it before I was purified, I didn’t share it.
+12\. “If someone had yet to hear this teaching sometime in the past, they should accept it with vision and meditation, accept it by wise observation, and realize it by thinking about it, which will cause their mind to attain liberation. If someone present here has yet to hear this teaching of the four truths, they should accept it with vision, accept it with meditation, and accept it with wisdom and realization, which will cause their mind to attain liberation. If someone is somewhere else and doesn’t hear this teaching of the four truths, they also should accept it with vision, accept it with meditation, accept it with wisdom, and accept it with realization, which will cause their mind to attain liberation. These are the four truths in three turnings that total twelve steps. When I knew it before I was purified, I didn’t share it.
 {:#p12}
 
-13\. “Among all the world’s population of gods and humans, whether they are Brahmā, Māra, ascetics, or priests, I knew and realized it myself by practicing precepts, concentration, wisdom, understanding. I knew and saw that liberation was accomplished, which was these four completions. After this birth, I won’t have another existence. Long free of the world, I have no more grief or danger.”
+13\. “Among all the world’s population of gods and humans, whether they are Brahmā, Māra, ascetics, or priests, I knew and realized it myself by practicing precepts, concentration, wisdom, and understanding. I knew and saw that liberation was accomplished, which was these four accomplishments. After this birth, I won’t have another existence. Long free of the world, I have no more grief or danger.”
 {:#p13}
 
-14\. When the Buddha said this, Venerable Ajñāta Kauṇḍinya and 8,000 nayutas of gods became dustless and spotless, and the Dharma eye arose in them. Those 1,000 monks ended the contaminants, their minds were liberated, they became arhats, and the above accumulations that should be ended were all turned. “The Bhagavān’s Dharma wheel,” went the call, “has been turned three times.” None of the Dharma grounds of heavenly worlds didn’t fully hear it. It went first to the Four God Kings, Trāyastriṃśa Heaven, Yama Heaven, Tuṣita Heaven, Nirmāṇarati Heaven, and Paranirmitavaśavartin Heaven. It reached the Brahma world in an instant and was heard everywhere there.
+14\. When the Buddha said this, Venerable Ajñāta Kauṇḍinya and 8,000 nayutas of gods became dustless and spotless, and the Dharma eye arose in them. Those 1,000 monks ended the contaminants, their minds were liberated, they became <em>arhat</em>s, and the above formations that should be ended were all turned. “The Bhagavān’s Dharma wheel,” went the call, “has been turned three times.” None of the Dharma grounds of heavenly worlds didn’t fully hear it. It went first to the Four God Kings, the Trāyastriṃśa Heaven, the Yama Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, and the Paranirmitavaśavartin Heaven. It reached the Brahma world in an instant and was heard everywhere there.
 {:#p14}
 
-15\. There was then an earthquake throughout this Buddha world’s 3,000 suns and moons and 12,000 heavens and earths. This was the Buddha Bhagavān’s first turning of the unsurpassed Dharma wheel that had yet to be turned at Bārāṇasī, and it illuminated the path for countless liberated gods and humans.
+15\. There was then an earthquake throughout this Buddha world’s 3,000 suns and moons and 12,000 heavens and [3,000] earths. This was the Buddha Bhagavān’s first turning of the unsurpassed Dharma wheel that had yet to be turned at Bārāṇasī, and it illuminated the path for countless liberated gods and humans.
 {:#p15}
 
 16\. After the Buddha taught this, everyone rejoiced.
@@ -63,13 +63,13 @@ next: T110.html
 
 ### Notes
 
-1. {:#n1} This text is parallel to [SN 56.11](https://suttacentral.net/sn56.11){:target="_blank"}, [SĀ 4.1](../samyukta/04/SA4_1.html), and [T110](T110.html). It’s provenance is unknown. Chinese records attribute it to Anshigao; however, this seems doubtful. Anshigao’s translations are close parallels to Sarvāstivāda-affiliated texts such as the Madhyama and Saṃyukta Āgamas, but this version of the *Dharmacakraparivarta Sūtra* is significantly different. It inserts a mythical encounter with a Dharma wheel to introduce the narrative, the audience consists of 1,000 monks and countless gods instead of the first five disciples, and it includes the concept of a trichiliocosm Buddha world. The translation style of the Chinese also differs from Anshigao’s translations in significant ways, suggesting that it was not his work. It does, however, appear to be an early translation likely dating prior to the 4th century CE. [\[back\]](#ref1)
+1. {:#n1} This text is parallel to [SN 56.11](https://suttacentral.net/sn56.11){:target="_blank"}, [SĀ 4.1](../samyukta/04/SA4_1.html), and [T110](T110.html). Its provenance is unknown. Chinese records attribute it to Anshigao; however, this seems doubtful. Anshigao’s translations are close parallels to Sarvāstivāda-affiliated texts such as the *Madhyama* and *Saṃyukta Āgama*, but this version of the *Dharmacakraparivarta Sūtra* is significantly different. It inserts a mythical encounter with a Dharma wheel to introduce the narrative, the audience consists of 1,000 monks and countless gods instead of the first five disciples, and it includes the concept of a trichiliocosm Buddha world. The translation style of the Chinese also differs from Anshigao’s translations in significant ways, suggesting that it was not his work. It does, however, appear to be an early translation likely dating prior to the 4th century CE. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 23 January 2025
 {: .revised}
 
 ---
