Added SA 1.166-9, 3.71, 6.28-31, updated pronunciation table

--- a/01_agama/samyukta/03/SA3_7.md
+++ b/01_agama/samyukta/03/SA3_7.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 3. Dependent Origination | 7 (289). Untaught'
 type: kramdown
 base: ../../../
 previous: SA3_6.html
-next: ../04/index.html
+next: SA3_71.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
