--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 6. Feeling | 5 (470). Poison Arrows'
 type: kramdown
 base: ../../../
 previous: index.html
-next: ../07/index.html
+next: SA6_28.html
 ---
 
 # [The Related Discourses](../index.html)
