--- a/01_agama/samyukta/02/SA2_58-74.md
+++ b/01_agama/samyukta/02/SA2_58-74.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 2. The Sense Fields | 58-74 (201). How to End t
 type: kramdown
 base: ../../../
 previous: SA2_57.html
-next: SA2_123-125.html
+next: SA2_75.html
 ---
 
 <h1><a href='../index.html'>The Related Discourses</a></h1>
