Converted SA2.129-130 to new format and update translations.

--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -7,66 +7,106 @@ previous: SA2_128.html
 next: SA2_130.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 129 (234). The End of the World
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二三四） 世界邊</th>
+  <th class='en'>129 (234). The End of the World</th>
+  <tr>
+    <td class='ch' title='t125.2.56c12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56c13'>爾時，世尊告諸比丘： 「我不說有人行到世界邊者，我亦不說不行到世界邊而究竟苦邊者。」 如是說已，入室坐禪。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t say someone could travel to the end of the world, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56c15'>時，眾多比丘，世尊去後，即共議言： 「世尊向者略說法言： 『我不說有人行到世界邊者，我亦不說不行到世界邊而得究竟苦邊者。』 如是說已，入室坐禪。 我等今於世尊略說法中未解其義。 是中諸尊，誰有堪能於世尊略說法中，廣為我等說其義者？」</td>
+    <td id='p3'>3. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say someone could travel to the end of the world, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the Venerables is capable of explaining the meaning of the Bhagavān’s brief teaching for us?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56c21'>復作是言： 「唯有尊者阿難。 聰慧總持，而常給侍世尊左右。 世尊讚歎多聞梵行。 堪為我等於世尊略說法中廣說其義。 今當往詣尊者阿難所，請求令說。」</td>
+    <td id='p4'>4. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining the meaning of the Bhagavān’s brief teaching for us. Let’s go to Venerable Ānanda and ask him to explain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56c25'>時，眾多比丘往詣尊者阿難所，共相問訊已，於一面坐。 具以上事廣問阿難。</td>
+    <td>That group of monks then went to Venerable Ānanda after having this discussion and sat to one side. They then asked Ānanda about the matter.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56c27'>爾時，阿難告諸比丘： 「諦聽，善思，今當為說。 若世間、世間名、世間覺、世間言辭、世間語說，此等皆入世間數。 諸尊，謂眼是世間、世間名、世間覺、世間言辭、世間語說，是等悉入世間數。 耳、鼻、舌、身、意亦復如是。</td>
+    <td id='p5'>5. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. Whether it’s the world, the world’s names, the world’s ideas, the world’s expressions, and the world’s languages, they all enter the world, and it proliferates. Venerables, that’s to say that when the eye is the world, the world’s names, the world’s ideas, the world’s expressions, and the world’s languages, which all enter the world, and it proliferates. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a3'>「多聞聖弟子於六入處集、滅、味、患、離如實知。 是名聖弟子到世界邊、知世間、世間所重、度世間。」</td>
+    <td id='p6'>6. “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is honored by the world, and crosses over the world.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a5'>爾時，尊者阿難復說偈言：</td>
+    <td id='p7'>7. It was then that Venerable Ānanda restated this in verse:</td>
+  </tr>
+<tr>
+  <td title='t125.2.57a7'><ul class='verse'>
+    <li class='ch'>「非是遊步者，<br/>
+    能到世界邊；<br/>
+    不到世界邊，<br/>
+    不能免眾苦。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“It’s not by traveling on foot<br/>
+    That the end of the world is reached;<br/>
+    Not reaching the end of the world,<br/>
+    Myriad pains can’t be escaped.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t125.2.57a9'><ul class='verse'>
+    <li class='ch'>是故牟尼尊，<br/>
+    名知世間者；<br/>
+    能到世界邊，<br/>
+    諸梵行已立。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Therefore, the honored sage<br/>
+    Is called the ‘Knower of the World;’<br/>
+    Able to reach the end of the world,<br/>
+    He established the religious practice.</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t125.2.57a11'><ul class='verse'>
+    <li class='ch'>「世界邊唯有，<br/>
+    正智能諦了；<br/>
+    覺慧達世間，<br/>
+    故說度彼岸。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>The end of the world is only something<br/>
+    Truly understood with right knowledge;<br/>
+    Awakened wisdom penetrates the world,<br/>
+    Which is called ‘crossing to the other side.’</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t125.2.57a13'>「如是，諸尊。 向者世尊略說法已，入室坐禪。 我今為汝分別廣說。」</td>
+    <td id='p8'>8. “Indeed, Venerables. The Bhagavān only gave this brief teaching and went into his dwelling to sit in meditation. Now, I’ve discerned and explained it for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a14'>尊者阿難說是法已，眾多比丘聞其所說歡喜，奉行。</td>
+    <td id='p9'>9. After he explained this teaching, that group of monks who heard what Venerable Ānanda taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.
-{: #p2}
+<hr/>
 
-3\. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the Venerables is capable of explaining the meaning of the Bhagavān’s brief teaching for us?”
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining the meaning of the Bhagavān’s brief teaching for us. Let’s go to Venerable Ānanda and request that he explain it.”
-{: #p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with <a href="https://suttacentral.net/sn35.116" target="_blank">SN 35.116</a>. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. That group of monks then went to Venerable Ānanda after having this discussion and sat to one side. They then asked Ānanda about the above subject.
-{: #p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 5 February 2025</p>
 
-6\. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. If the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages are all entered, the world proliferates. Venerables, that’s to say that when the eye enters the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages, the world proliferates. <em>The ear, nose, tongue, body, and mind are likewise.</em>
-{: #p6}
-
-7\. “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is respected by the world, and traverses the world.”
-{: #p7}
-
-8\. It was then that Venerable Ānanda restated this in verse:
-{: #p8}
-
-* {:.verse}“It’s not by traveling on foot\\
-That the end of the world is reached;\\
-Not reaching the end of the world,\\
-Myriad pains can’t be escaped.
-
-* {:.verse}Therefore, the honored sage\\
-Is called ‘Knower of the World;’\\
-Able to reach the end of the world,\\
-He established the religious practice.
-
-* {:.verse}The end of the world is only something\\
-Truly understood with right knowledge;\\
-Awakened wisdom penetrates the world,\\
-Which is called ‘crossing to the other side.’
-
-9\. “So it is, Venerables! The Bhagavān only gave this brief teaching and went into his dwelling to sit in meditation. Now, I’ve discerned and explained it in detail for you.”
-{: #p9}
-
-10\. After Venerable Ānanda explained this teaching, that group of monks who heard what he taught rejoiced and approved.
-{: #p10}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with [SN 35.116](https://suttacentral.net/sn35.116){:target="_blank"}. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
