--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -7,39 +7,51 @@ previous: SA2_129.html
 next: SA2_221.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 130 (235). Having a Teacher and a Disciple
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二三五） 有師、有弟子</th>
+  <th class='en'>130 (235). Having a Teacher and a Disciple</th>
+  <tr>
+    <td class='ch' title='t125.2.57a16'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a17'>爾時，世尊告諸比丘： 「有師、有近住弟子，則苦獨住。 無師、無近住弟子，則樂獨住。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one has a teacher or a disciple who lives nearby, living alone is unpleasant. When one has no teacher or disciple who lives nearby, living alone is pleasant.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a19'>「云何有師、有近住弟子，則苦獨住？ 緣眼、色，生惡不善覺，貪、恚、癡俱。 若彼比丘行此法者，是名有師。 若於此邊住者，是名近住弟子。 耳、鼻、舌、身、意亦復如是。 如是有師、有近住弟子，常苦獨住。</td>
+    <td id='p3'>3. “How does having a teacher or a disciple living nearby make living alone painful? Conditioned by the eye and forms, bad and unskillful things and thoughts arise together with greed, anger, and delusion. If a monk practices these things, he’s said to have a teacher. If he lives on this side, he’s said to be a disciple who lives nearby. <em>The ear, nose, tongue, body, and mind are likewise.</em> In this way, having a teacher and having a disciple living nearby makes living alone constantly unpleasant.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a23'>「云何無師、無近住弟子，常樂獨住？ 緣眼、色，生惡不善覺，貪、恚、癡俱。 彼比丘不行，是名無師。 不依彼住，是名無近住弟子。 是名無師、無近住弟子，常樂獨住。若彼比丘無師、無近住弟子者，我說彼得梵行福。所以者何？無師、無近住弟子，比丘於我建立梵行，能正盡苦，究竟苦集。」</td>
+    <td id='p4'>4. “How does having no teacher and no disciple who lives nearby make living alone constantly pleasant? Conditioned by the eye and forms, bad and unskillful things and thoughts arise together with greed, anger, and delusion. That monk who doesn’t practice [these things] is said to have no teacher. Living independent of them, he’s said to have no disciple living nearby. This is called having no teacher or disciple living nearby making living alone constantly pleasant.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57a27'>「若彼比丘無師、無近住弟子者，我說彼得梵行福。 所以者何？ 無師、無近住弟子，比丘於我建立梵行。 能正盡苦，究竟苦邊。」</td>
+    <td id='p5'>5. “If that monk has no teacher or disciple living nearby, I say he attains the merits of the religious practice. Why is that? Having no teacher and no disciple living nearby, a monk establishes my religious practice. He’s able to correctly put an end suffering and reach the ultimate end of suffering.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.57b1'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p6'>6. After he spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Having a teacher and having a disciple who lives nearby makes living alone painful. Having no teacher and no disciple who lives nearby makes living alone pleasant.
-{: #p2}
+<hr/>
 
-3\. “How does having a teacher or a disciple living nearby make living alone painful? Conditioned by the eye and forms, bad and unskillful feelings arise together with greed, anger, and delusion. If a monk practices this teaching, he’s said to have a teacher. If he abides on the edge of this, he’s said to have a disciple who lives nearby. <em>The ear, nose, tongue, body, and mind are likewise.</em> Thus, having a teacher and having a disciple living nearby makes living alone constant suffering.
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. “How does having no teacher and no disciple who lives nearby make living alone constant happiness? Conditioned by the eye and forms, bad and unskillful feelings arise together with greed, anger, and delusion. That monk who doesn’t practice this is said to have no teacher. Not depending on that abode, he’s said to have no disciple living nearby. This is called having no teacher and no disciple living nearby, which makes living alone constant happiness.
-{: #p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 235 in the <cite>Taisho</cite> edition and no. 308 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0057a16" target="_blank">T99.2.57a16-b2</a>). It’s parallel with <a href="https://suttacentral.net/sn35.151" target="_blank">SN 35.151</a>. The Pali version includes more explicit explanation for this otherwise esoteric <em>sūtra</em>, but it’s explanations do not explain the wording we find here.</p>
+<p>In SN 35.151, “living with a pupil” (<em>santevāsika</em>) means “having fettered memories and thoughts” (<em>sarasaṅkappā saṁyojaniyā</em>), which are bad and unskillful things that arise from sensory experience. Because they “live within” (<em>anto vasanti</em>) a monk, this is like living with a pupil.</p>
+<p>This reading of P. <em>anta</em> as “within” is forced by the fact that <em>anta</em> does not seem to have the reading of “beside, near” in P. But this reading is possible in S., and it is the reading that we find here in C. Thus, we find here that <em>antevāsika</em> is trans. as “living nearby” (近住), and the equiv. of <em>tyāssa anto vasanti</em> is rendered as “one who lives on this side” (於此邊住者). “This side” here would be in constrast to the “other side” of <em>nirvāṇa</em>.</p>
+<p>In SN 35.151, “having a teacher” (<em>sācariyaka</em>) means that these same bad and unskillful things “overwhelm” (<em>samudācaranti</em>) the monk. Here, however, the explanation is that it’s because “a monk practices these [bad and unskillful] things” (彼比丘行此法者) that he is said to have a teacher. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “I say he attains the merits of the religious life. Why is that? Having no teacher and no disciple living nearby, a monk establishes my religious practice. He’s able to correctly end suffering and reach the ultimate end of suffering.”
-{: #p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 5 February 2025</p>
 
-6\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and accepted it.
-{:#p6}
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 235 in the <cite>Taisho</cite> edition and no. 308 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0057a16" target="_blank">T99.2.57a16-b2</a>). It’s parallel with [SN 35.151](https://suttacentral.net/sn35.151){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
