Added SA 2.81-92, updated SA 2.127-128, other typos

--- a/01_agama/samyukta/02/SA2_127.md
+++ b/01_agama/samyukta/02/SA2_127.md
@@ -7,33 +7,42 @@ previous: SA2_126.html
 next: SA2_128.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 127 (232). Samṛddhi (5)
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二三二） 三彌離提</th>
+  <th class='en'>127 (232). Samṛddhi (5)</th>
+  <tr>
+    <td class='ch' title='t125.2.56b21'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56b22'>時，有比丘名三彌離提，往詣佛所，稽首佛足，退坐一面。 白佛言： 「世尊，所謂『世間空』。 云何名為『世間空』？」</td>
+    <td id='p2'>2. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘the world is empty.’ What does the ‘the world is empty’ mean?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56b24'>佛告三彌離提： 「眼空。 常⋯恒⋯不變易法空，我所空。 所以者何？ 此性自爾。 若色、眼識、眼觸、眼觸因緣生受，若苦、若樂、不苦不樂，彼亦空。 常、恒、不變易法空，我所空。 所以者何？ 此性自爾。 耳、鼻、舌、身、意亦復如是。 是名空世間。」</td>
+    <td id='p3'>3. The Buddha told Samṛddhi, “The eye is empty. It’s empty of something constant, eternal, and unchanging and empty of something that belongs to self. Why is that? It’s naturally like this. Whether it’s form, visual awareness, visual contact, feelings that dependently arise from visual contact that are painful, pleasant, or neither painful nor pleasant, they are also empty. They are empty of something constant, eternal, and unchanging and empty of something that belongs to self. Why is that? They are naturally like this. <em>The ear, nose, tongue, body, and mind are likewise.</em> This is called ‘the world is empty.’”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.56b29'>佛說此經已，三彌離提比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. After he spoke this <em>sūtra</em>, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘the world is empty.’ What does the ‘the world is empty’ mean?”
-{:#p2}
+<hr/>
 
-3\. The Buddha told Samṛddhi, “The eye is empty. It’s empty of something constant … eternal … unchanging … empty of something that belongs to self. Why is that? Its naturally like this. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are also empty. They are empty of something constant … eternal … unchanging … empty of something that belongs to self. Why is that? They are naturally like this. <em>The ear, nose, tongue, body, and mind are likewise.</em> This is called ‘the world is empty.’”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>This is <em>sūtra</em> no. 232 in the <cite>Taisho</cite> edition and no. 305 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b21" target="_blank">T99.2.56b21-c1</a>). It’s similar to <a href="https://suttacentral.net/sn35.85" target="_blank">SN 35.85</a>, but both the interlocutor and the definition of “empty” is different here.</p>
+<p>In SN 35.85, Ānanda is the monk who asks the Buddha about the expression “the world is empty.” SN 35.85 also says the the world is empty of self or what belongs to self. Here, “self” has been replaced with “something constant, eternal, and unchanging” (<span class="ch">常、恒、不變易法</span>), though the two expression would appear to be equiv. when we observe the arguments made against the existence of a self in other <em>sūtra</em>s. Another detail that we find here that’s absent from SN 35.85 is the assertion that the world is naturally empty of these things.</p>
+<p>Apart from these superficial differences, these two <em>sūtra</em>s are the same. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 6 February 2025</p>
 
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 232 in the <cite>Taisho</cite> edition and no. 305 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b21" target="_blank">T99.2.56b21-c1</a>). It’s similar to [SN 35.85](https://suttacentral.net/sn35.85){:target="_blank"}, but both the interlocutor and the definition of “empty” is different here. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
