--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -102,7 +102,11 @@ next: SA2_130.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with <a href="https://suttacentral.net/sn35.116" target="_blank">SN 35.116</a>. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with <a href="https://suttacentral.net/sn35.116" target="_blank">SN 35.116</a>. The introduction of the <em>sūtra</em> is the same in both versions, but they diverge at the point when the monks go to Ānanda for an explanation.</p>
+<p>In SN 35.116, Ānanda chides the monks who go to him, using a parable about looking for heartwood in a tree’s roots and branches. They should have asked the Buddha while they had the chance. This doesn’t happen in the present version. Otherwise the story leading up to Ānanda’s explanation is the same.</p>
+<p>Another difference is that Ānanda defines the world in SN 35.116 as perceptions and imaginings about the world (<em>lokasaññī … lokamānī</em>) that results from sensory experience. Here, Ānanda instead refers to societal conventions about the world, referring to the names, ideas, expressions, and languages (<span class="ch">世間名、世間覺、世間言辭、世間語說</span>) that enter the world through sensory experience.</p>
+<p>In SN 35.116, Ānanda doesn’t comment on how someone reaches the end of suffering by going to the end of the world. Here, Ānanda explains this as truly knowing the formation, cessation, enjoyment, trouble, and escape from the six sense fields.</p>
+<p>Finally, these two versions of this <em>sūtra</em> conclude quite differently. Here, Ānanda gives the monks a verse summary of his explanation, while the monks go and tell the Buddha about Ānanda’s explanation in SN 35.116. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
