--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -46,8 +46,8 @@ next: SA2_221.html
 <ol class="notes-list">
 <li id="n1"><p>This is <em>sūtra</em> no. 235 in the <cite>Taisho</cite> edition and no. 308 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0057a16" target="_blank">T99.2.57a16-b2</a>). It’s parallel with <a href="https://suttacentral.net/sn35.151" target="_blank">SN 35.151</a>. The Pali version includes more explicit explanation for this otherwise esoteric <em>sūtra</em>, but it’s explanations do not explain the wording we find here.</p>
 <p>In SN 35.151, “living with a pupil” (<em>santevāsika</em>) means “having fettered memories and thoughts” (<em>sarasaṅkappā saṁyojaniyā</em>), which are bad and unskillful things that arise from sensory experience. Because they “live within” (<em>anto vasanti</em>) a monk, this is like living with a pupil.</p>
-<p>This reading of P. <em>anta</em> as “within” is forced by the fact that <em>anta</em> does not seem to have the reading of “beside, near” in P. But this reading is possible in S., and it is the reading that we find here in C. Thus, we find here that <em>antevāsika</em> is trans. as “living nearby” (近住), and the equiv. of <em>tyāssa anto vasanti</em> is rendered as “one who lives on this side” (於此邊住者). “This side” here would be in constrast to the “other side” of <em>nirvāṇa</em>.</p>
-<p>In SN 35.151, “having a teacher” (<em>sācariyaka</em>) means that these same bad and unskillful things “overwhelm” (<em>samudācaranti</em>) the monk. Here, however, the explanation is that it’s because “a monk practices these [bad and unskillful] things” (彼比丘行此法者) that he is said to have a teacher. [<a href="#ref1">back</a>]</p></li>
+<p>This reading of P. <em>anta</em> as “within” is forced by the fact that <em>anta</em> does not seem to have the reading of “beside, near” in P. But this reading is possible in S., and it is the reading that we find here in C. Thus, we find here that <em>antevāsika</em> is trans. as “living nearby” (<span class="ch">近住</span>), and the equiv. of <em>tyāssa anto vasanti</em> is rendered as “one who lives on this side” (<span class="ch">於此邊住者</span>). “This side” here would be in constrast to the “other side” of <em>nirvāṇa</em>.</p>
+<p>In SN 35.151, “having a teacher” (<em>sācariyaka</em>) means that these same bad and unskillful things “overwhelm” (<em>samudācaranti</em>) the monk. Here, however, the explanation is that it’s because “a monk practices these [bad and unskillful] things” (<span class="ch">彼比丘行此法者</span>) that he is said to have a teacher. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
